# plc-predicate

./: Cargo.toml  LICENSE-APACHE  README.md  SAFETY_RULES_LL.md  SAFETY_RULES_SCL.md  SAFETY_RULES_SFC.md  SAFETY_RULES_ST.md
docs/fbd/: siemens.md
docs/safety/: SAFETY_RULES_FBD.md  SAFETY_RULES_IL.md
rust2plc/: Cargo.toml
rust2plc-macro/: Cargo.toml
rust2plc-macro/src/: lib.rs
rust2plc/src/: error.rs  langs.rs  lib.rs  registry.rs  types.rs  var.rs
rust2plc/src/st/: function.rs
src/: fbd.rs  lib.rs
src/fbd/: predefined_blocks.md  siemens_details.md
