[package]
name = "plc-predicate"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
authors = ["Boris Zhguchev <zhguchev@gmail.com>"]
description = "A framework for building PLC programms"
repository = "https://github.com/besok/plc-predicate"
license = "Apache-2.0"
keywords = ["plc", "predicate", "automation"]
categories = ["embedded"]
readme = "README.md" 

[dependencies]
rust2plc = { path = "rust2plc" }
rust2plc-macro= { path = "rust2plc-macro" }

[dev-dependencies]
# Testing dependencies
# For example:
# criterion = "0.5"

[features]
# Optional features
# default = ["std"]
# std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["rust2plc-macro","rust2plc", "."]